# telegram-bot-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule  docker-compose.prod.yml  docker-compose.yml  logging.conf  main.py  polling.py  pyproject.toml  requirements.txt  settings.py
.platform/hooks/prebuild/: build.sh
alembic/: env.py
alembic/versions/: init.py
app/: __init__.py  celery.py  logger.py  schemas.py  serializers.py  server.py  settings.py
app/celery/: __init__.py  celery.py  init.py  tasks.py
app/core/depends/: __init__.py  session.py
app/database/: __init__.py  db_connector.py  init.py  models.py  session.py
app/database/orm/: __init__.py  user.py
app/database/schema/: user.py
app/routers/: admin.py
bot/: __init__.py  bot.py  buttons.py  decorators.py  filter.py  filters.py  markups.py  middlewares.py  time.py  utils.py
bot/background_tasks/: __init__.py  send_message.py
bot/background_tasks/periodic/: __init__.py  test_task.py
bot/const/: phrases.py
bot/keyboards/inline/: payments.py  raffle.py
bot/keyboards/reply/: main_menu.py  raffle.py
bot/libs/yoomoney/: client.py  quickpay.py
bot/logic/: controller.py  markups.py  middlewares.py
bot/routers/: __init__.py  base_commands.py  commands.py  form.py  messages.py
bot/routers/admin/: router.py
bot/routers/lots/: router.py
bot/routers/raffle/: commands.py  payments.py  prize.py  router.py  winner.py  winners.py
const/: phrases.py
db/: db_connector.py
docker/: .dockerignore  Dockerfile
docker/compose/: alembic.yml  app.yml  celery.yml  database.yml  main.yml  redis.yml
logic/: bot.py  controller.py  markups.py  memory.py  middlewares.py  notification_service.py  time.py
migrations/: env.py
migrations/versions/: 43ebfe6215b2_init_tables.py  713764557c8e_add_winners_table.py  8a4617ffb1fd_edit_users_table_make_name_field_.py  babef7224cc3_add_user_table.py  beea5d2e1856_init.py  bf6cef66ec2a_add_prize_to_winners.py  dadbbc4db7ff_init_tables.py  fe085a39cd33_init_tables.py
static/: script.js  style.css
templates/: index.html
(+20 files in other folders)
