[tool.poetry]
name = "telegram-bot-template"
version = "0.1.0"
description = ""
authors = ["oregu"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.9.16"
aiomysql = "^0.1.1"
fastapi = "^0.89.1"
pydantic = "^1.10.4"
PyMySQL = "^1.0.2"
python-dotenv = "^0.21.1"
SQLAlchemy = "^2.0.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
aiogram = {version = "^3.0.0b6", allow-prereleases = true}
alembic = "^1.9.2"
cryptography = "^39.0.0"

[tool.poetry.group.dev.dependencies]
python = "3.9.16"
aiomysql = "^0.1.1"
fastapi = "^0.89.1"
pydantic = "^1.10.4"
PyMySQL = "^1.0.2"
python-dotenv = "^0.21.1"
SQLAlchemy = "^2.0.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
aiogram = {version = "^3.0.0b6", allow-prereleases = true}
alembic = "^1.9.2"
pre-commit = "^3.0.3"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
