[tool.poetry]
name = "embassy_bot"
version = "0.1.0"
description = ""
authors = ["oregu"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.11.1"
# cryptography = "^39.0.0"
# jinja2 = "^3.1.2"
asyncpg = "^0.28.0"
fastapi = "^0.101.1"
sqlalchemy = "^2.0.20"
uvicorn = "^0.23.2"
aiogram = "3.0.0b9"
alembic = "^1.11.3"
redis = "^5.0.0"
celery = "^5.3.1"
pydantic-settings = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
